# Arc-Engine

./: CMakeLists.txt  Dependencies.cmake
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/Private/: Application.cpp  Window.cpp
Engine/Core/Public/: Application.h  Layer.h  MulticastDelegate.h  Window.h
Engine/Engine/: CMakeLists.txt
Engine/Engine/Private/: Engine.cpp
Engine/Engine/Private/Systems/: InputSystem.cpp
Engine/Engine/Public/: Engine.h
Engine/Engine/Public/Systems/: InputSystem.h
Game/: CMakeLists.txt
Game/Private/: AppLayer.cpp  main.cpp
Game/Public/: AppLayer.h
